feat(operation-service): remove grpc server on main.go
